# pvs

./: .gitignore  README.md  appveyor.yaml  appveyor.yml
baseline/client/: .eslintrc.json  README.md  deploy.js  index.ejs  package-lock.json  package.json  version.json  webpack.common.js  webpack.config.js  webpack.dev.js
baseline/client/scripts/datatools/cog-to-flywheel/: cog-to-flywheel.py  pyproject.toml  tsv_transformer.py
baseline/client/scripts/datatools/combine-cog-files/: README.md  combine-cog-files.py  pyproject.toml
client/: .eslintignore  README.md  electron-builder.yml  package.json  version.json  vue.config.js
client/scripts/: pre-deploy.js  tag-deploy.js  version-deploy.js
client/src/: App.vue  background.js  breath-data.js  data-upload.js  emwave-data.js  emwave.js  heart-data.js  lumosity-helper.js  main.js  preload.js  regimes.js  s3utils.js  session-store.js  utils.js
client/test/: breath-data.test.js  regimes.test.js
common/: README.md  aws-settings.json.tmpl  aws-settings.mjs.tmpl  cognito-settings.json  index.html  rundemo.sh
common/api/: client.js  package-lock.json  package.json
common/auth/: auth.js  package-lock.json  package.json  webpack.config.js
common/db/: db.js  package-lock.json  package.json  webpack.config.js
common/deploytools/: index.js  package-lock.json  package.json
common/logger/: babel.config.js  babel.config.json  logger.js  package-lock.json  package.json  webpack.config.js
common/pay-info/: README.md  babel.config.json  package-lock.json  (+6 more)
server/: README.md  dev.tfvars  main.tf  variables.tf
(+383 files in other folders)
