[tool.poetry]
name = "cog-to-flywheel"
version = "0.1.0"
description = "Loads cognitive assessment data from AWS DynamoDB into Flywheel"
authors = ["Noah Mercer <noahmerc@usc.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
flywheel-sdk = "^16.16.7"
boto3 = "^1.26.115"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
